public/css/main.css
.brand-logo {
    margin-top: 10px;
    margin-bottom: 10px;
    height: 40px;
    width: auto;
}

p {
    line-height: 2rem;
}

.button-collapse {
    color: white;
    margin-left: 0px;
}

.parallax-container {
    min-height: 380px;
    line-height: 0;
    height: auto;
    color: rgba(255, 255, 255, .9);
}

.parallax-container .section {
    width: 100%;
}

@media screen and (max-width: 992px) {
    .parallax-container .section {
        position: absolute;
        top: 40%;
    }
    #index-banner .section {
        top: 10%;
    }
    .brand-logo {
        margin-top: 10px;
        margin-bottom: 10px;
        height: 40px;
        width: auto;
    }
}

@media screen and (max-width: 600px) {
    #index-banner .section {
        top: 0;
    }
    .brand-logo {
        margin-top: 15px;
        margin-bottom: 10px;
        height: 30px;
        width: auto;
    }
}

.icon-block {
    padding: 0 15px;
}

.icon-block .material-icons {
    font-size: inherit;
}

footer.page-footer {
    margin: 0;
}

.horizontal {
    margin-top: 14px;
}

tr {
    margin-top: 10px;
    padding: 0px;
}

.newalb {
    width: 300px;
    height: 300px;
    margin-top: 20px;
    border: 3px solid white;
}

.newalbm {
    width: 150px;
    height: 150px;
    margin-top: 20px;
    border: 3px solid white;
}

.header {
    padding-left: 0px !important;
    margin-bottom: 0px !important;
}

.faf {
    color: white;
}

